--- a/AngularStarterKitWeb/tsconfig.json
+++ b/AngularStarterKitWeb/tsconfig.json
@@ -1,23 +1,17 @@
-﻿{
-    "compilerOptions": {
-        "target": "es5",
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "sourceMap": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "removeComments": false,
-        "lib": [ "es2015", "dom" ],
-        "noImplicitAny": true,
-        "suppressImplicitAnyIndexErrors": true,
-        "types": [ "node" ],
-        "typeRoots": [
-            "node_modules/@types/"
-        ]
+/*
+  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
+  It is not intended to be used to perform a compilation.
+
+  To learn more about this file see: https://angular.io/config/solution-tsconfig.
+*/
+{
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
     },
-    "compileOnSave": true,
-    "exclude": [
-        "node_modules/*",
-        "**/*-aot.ts"
-    ]
+    {
+      "path": "./tsconfig.spec.json"
+    }
+]
 }
