Last fixes for the Aug. branch, as discussed on the review on 9/10. Fixed and tested twice, including the clean install. The branch is ready for more tests and merging to master.

--- a/WebApi2StarterKit/WebApi2StarterKit/Web.config
+++ b/WebApi2StarterKit/WebApi2StarterKit/Web.config
@@ -80,6 +80,16 @@
 
 		<!--Active Directory Login support-->
 		<add key="useADlogin" value="false" />
+		<!-- When you are not using the Active Directory (the value = "false" on the line above) -
+		the following 4 lines are ignored.
+		And, when you are using the Active Directory, there are 2 cases:
+		a. you need your WebAPI application to run with the currently loged user credentials.
+		In this case please remove these lines or set the "value" to an empty string on each of them.
+		The system will take the domain and the user name from the Environment on the runtime.
+		b. you need your WebAPI application to run with credentials different from the currently loged user.
+		In this set "value" with the correct string on each line and the system will use what you entered.
+		Please see the article "Few aspects of Active Directory authentication" at Izenda Confluence for details. 
+		-->
 		<add key="ADDomain" value="ad.system.com:389" /><!-- AD/LDAP address -->
 		<add key="ADContainer" value="DC=ad,DC=system,DC=com" /><!-- AD/LDAP container string -->
 		<add key="ADLoginUser" value="ad.user" /><!-- AD/LDAP login user name -->
