--- a/AngularStarterKitWeb/package.json
+++ b/AngularStarterKitWeb/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --aot --open",
+    "start": "node --max-old-space-size=8192 ./node_modules/@angular/cli/bin/ng serve --aot --open",
     "build": "ng build --aot",
     "test": "ng test",
     "lint": "ng lint",
